# chickpy

./: .pre-commit-config.yaml  README.md  mypy.ini  pyproject.toml  setup.cfg
.github/: tests.yml
chickpy/: backend.py  datasource.py  enums.py  language.lark  options.py  parser.py  processor.py  shell.py
tests/: test_processor.py  util.py
tests/fixtures/csv/: base_csv_comma_separated.csv  base_csv_semicolon_separated.csv  base_csv_wrong_sep.csv  multi_column.csv
