[tool.poetry]
name = "chickpy"
version = "0.1.0"
description = ""
authors = ["Arbitrio <ernesto.arbitrio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.0.0"
matplotlib = "^3.5.1"
mypy = "^0.930"
mock = "^4.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = {version = "^21.12b0", allow-prereleases = true}
pytest = "^6.2.5"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]
