[tool.poetry]
name = "chickpy"
version = "0.1.0"
description = ""
authors = ["Arbitrio <ernesto.arbitrio@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
lark = "^1.1.2"
matplotlib = "^3.6.0"
mypy = "^1.4"
mock = "^5.1.0"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
black = {version = "^23.7.0", allow-prereleases = true}
pytest = "^7.1.3"
isort = "^5.10.1"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_classes = ["Test", "Describe"]
python_functions = ["test_", "it_", "and_", "but_", "they_"]
python_files = ["test_*.py",]
testpaths = ["tests",]
